apps/nginx-test/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-test
spec:
  parentRefs:
    - name: cloudflare-tunnel
      namespace: default
  hostnames:
    - "test.abutt.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-test
          port: 80
